tests/fail/type_does_not_exist.parallel
/*
error: value not in scope
9  |function main(): Int8 {
10 |    var a: notAType = 0;
               ^^^^^^^^ nothing named 'notAType'
11 |
*/

function main(): Int8 {
	var a: notAType = 0;

	return 0;
}